# cybole

./: .eslintcache  .eslintrc.js  .prettierrc.js  README.md  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  development.yml  publish.yml  release.yml  upload_artifacts.yml
electron/: electron.ts  main.ts  mainMenu.ts  preload.ts  tsconfig.json
public/: electron.js  index.html  mainMenu.js  preload.js
src/: App.tsx  Menu.tsx  Setting.tsx  global.d.ts  index.css  index.tsx  main.tsx  mocks.ts  setupTests.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/@types/: CybolNode.d.ts  DataRow.d.ts  EditorProps.d.ts  FileResult.d.ts  SettingSchema.d.ts  global.d.ts  renderer.d.ts
src/editor/: CellEdit.css  CybolNode.d.ts  DataRow.d.ts  EditCell.test.tsx  EditCell.tsx  EditCellDropdown.jsx  EditCellInput.jsx  EditInDataGridFormat.test.tsx  EditInDataGridFormat.tsx  EditInXmlFormat.test.tsx  EditInXmlFormat.tsx  Editor.tsx  EditorProps.d.ts  FileResult.d.ts
src/main/: main.ts  mainMenu.ts
src/preload/: preload.ts
src/renderer/: renderer.tsx
src/startScreen/: ProjectList.css  ProjectList.test.tsx  ProjectList.tsx  ProjectNew.tsx  ProjectOpen.test.tsx  ProjectOpen.tsx  ProjectScreen.tsx  ProjectSelector.test.tsx  ProjectSelector.tsx  Setting.tsx  Settting.test.tsx  (+1 more)
test/: EditInDataGridFormat.test.tsx  EditInXmlFormat.test.tsx  ProjectList.test.tsx  ProjectOpen.test.tsx  ProjectSelector.test.tsx  Settting.test.tsx  useForm.test.ts
tests/: setupTests.ts
(+29 files in other folders)
